--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,9 @@ services:
     container_name: escape_room_mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: escape_room
-      MYSQL_USER: escaperoom_user
-      MYSQL_PASSWORD: escaperoom_pass
+      MYSQL_DATABASE: $url
+      MYSQL_USER: $user
+      MYSQL_PASSWORD: $password
     ports:
       - "3306:3306"
     volumes:
