--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,16 @@ services:
     container_name: escape_room_mysql
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: $url
-      MYSQL_USER: $user
-      MYSQL_PASSWORD: $password
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: ${DB_NAME}
+      USER: ${USER}
+      PASSWORD: ${PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
+      - ./init/00_create_user.sh:/docker-entrypoint-initdb.d/00_create_user.sh
+      - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/01_escape_room.sql
       - db_data:/var/lib/mysql
-      - ./init/escape_room.sql:/docker-entrypoint-initdb.d/escape_room.sql
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
