--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,12 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${DB_NAME}
-      USER: ${USER}
-      PASSWORD: ${PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
-      - ./init/00_create_user.sh:/docker-entrypoint-initdb.d/00_create_user.sh
       - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/01_escape_room.sql
       - db_data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
