created Mockito test on Certificate CRUD (#56)
* fix: change difficultyLevel type to String to match VARCHAR in DB (#33)

* Feature/create escaperoom crud (#37)

* feature: create EscapeRoom class

* feature: create EscapeRoomDao logic

* feature: create EscapeRoomService logic

* Feature/create room builder (#39)

* feature: create EscapeRoom class

* feature: create EscapeRoomDao logic

* feature: create EscapeRoomService logic

* feature: create ArrayLists of decorations and clues in class Room

* feature: create RoomBuilder

* feature/create_certificate_crud (#40)

* feat: create interface ticket dao that extends Base Dao

* feat: create class that connect with DB and provide method CRUD

* feat: create object Ticket with validator in the contructor, getter & Override ToString.

* feat: refactor type of price from double to BigDecimal

* feat: create Ticket service that mediate with the program and DAO and handle exceptions

* feat: create certificate dao Interface that extends BaseDao methods

* feat: create object certificate with 2 constructor to be able to create certificate from by application and certificate loaded from the DB.

* feat: create enum of certificate types with defaulText.

* feat: refactor toString

* feat: created Certificate that has business logic and interact with DAO

* feat: created Certificate Dao implementation with CRUD operations and DB mapping

* Database conections (#41)

* Feat: creating the database connection class

* FEAT: changes for the connection database and the init compose

* Feature/player model (#36)

* feat: add Player model

* feat: add PlayerDao interface

* feat: add Email, NickName and Age as value objects with internal validation

* feat: add PlayerId as value objects with internal validation

* refactor: change Player to use value objects

* refactor: change IdPlayer to generic Id

* Feature/create escape room builder (#42)

* feature: create EscapeRoom class

* feature: create EscapeRoomDao logic

* feature: cr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,15 @@ services:
     container_name: escape_room_mysql
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: $url
-      MYSQL_USER: $user
-      MYSQL_PASSWORD: $password
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
+      - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/01_escape_room.sql
       - db_data:/var/lib/mysql
-      - ./init/escape_room.sql:/docker-entrypoint-initdb.d/escape_room.sql
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
