--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/01_escape_room.sql
+      - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/escaperoom_data.sql
       - db_data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
