--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/escape_room_db.sql
+      - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/01_escape_room.sql
+      - ./init/01_escape_room.sql:/docker-entrypoint-initdb.d/02_escape_room.sql
       - db_data:/var/lib/mysql
+
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
